create+adaptiv info component

--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -9,4 +9,12 @@
     --font-size-xl: 36px;
     --font-line-xl: 36px;
     --font-xl: var(--font-size-xl) / var(--font-line-xl) var(--font-family-main);
+
+
+
+    //text-color
+    --color-grey:#8b8e94;
+    --color-black:#000000;
+    --color-white:#fffefe;
+    
 }
