--- a/src/components/Info/Info.module.scss
+++ b/src/components/Info/Info.module.scss
@@ -1,7 +1,8 @@
 .Info_box {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 100px;
+    flex-wrap: wrap;
 
 }
 
@@ -9,15 +10,75 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    max-width: 430px;
 
     &_logo {
         max-width: 60%;
-        margin: -15px auto 50px auto
+        margin: -15px auto 35px auto
+    }
+
+    &_separation {
+        color: var(--color-grey);
+        line-height: 24px;
+        font-size: 15px;
+        margin-bottom: 16px;
+        text-align: center;
     }
 
     &_text {
-        color: #8b8e94;
+        color: var(--color-grey);
         line-height: 24px;
         font-size: 15px;
+        margin-bottom: 30px;
+        text-align: justify;
+    }
+
+    &_reservation {
+        display: flex;
+        justify-content: center;
+
+        &_item {
+            color: var(--color-black);
+            font-size: 15px;
+            padding-bottom: 5px;
+            border-bottom: 2px solid var(--color-black);
+            cursor: pointer;
+            max-width: 207px;
+            position: relative;
+        }
+
+    }
+}
+
+
+.img {
+    max-width: 526px;
+    max-height: 645px;
+
+    &_item {
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+    }
+}
+
+@media(max-width:985px) {
+    .Info {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        max-width: 430px;
+
+        &_text {
+            color: var(--color-grey);
+            line-height: 24px;
+            font-size: 15px;
+            margin-bottom: 30px;
+            text-align: justify;
+        }
+    }
+
+    .img {
+        margin: 37px 0 0 0;
     }
 }
