--- a/src/components/ParallaxTop/ParallaxTop.module.scss
+++ b/src/components/ParallaxTop/ParallaxTop.module.scss
@@ -1,6 +1,9 @@
 .ParallaxTop {
+    margin-top: -100px;
     max-width: 100%;
     max-height: 660px;
+    position: relative;
+    z-index: -2;
 
     &_img {
         width: 100%;
