--- a/src/components/PresentationMenuFragment/PresentationMenuFragment.module.scss
+++ b/src/components/PresentationMenuFragment/PresentationMenuFragment.module.scss
@@ -1,14 +1,15 @@
-.PresentationMenuFragment{
+.PresentationMenuFragment {
     max-width: 585px;
     max-height: 286px;
     display: flex;
 }
 
-.img{
+.img {
     max-width: 292px;
     max-height: 246px;
     position: relative;
-    &_bloc{
+
+    &_bloc {
         width: 0;
         height: 0;
         border-left: 12px solid transparent;
@@ -19,7 +20,8 @@
         top: 15px;
         transform: rotate(-90deg);
     }
-    &_blocReverce{
+
+    &_blocReverce {
         width: 0;
         height: 0;
         border-left: 12px solid transparent;
@@ -30,15 +32,15 @@
         left: -6px;
         transform: rotate(-270deg);
     }
-    
-    &_item{
+
+    &_item {
         width: 100%;
         height: 100%;
         background-size: contain;
     }
 }
 
-.text{
+.text {
     background-color: var(--color-white);
     max-width: 293px;
     display: flex;
@@ -47,4 +49,42 @@
     text-align: center;
     padding: 0 15px;
     font-size: 15px;
+}
+
+@media(max-width:1199px) {
+    .PresentationMenuFragment {
+        max-width: 585px;
+        max-height: 450px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .img {
+        max-width: 292px;
+        height: 246px;
+        position: relative;
+
+        &_bloc {
+            display: none;
+        }
+
+        &_blocReverce {
+            display: none;
+        }
+
+        // &_item{
+
+        // }
+    }
+    .text{
+        background-color: var(--color-white);
+        max-width: 293px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        padding: 0 15px;
+        font-size: 15px;
+        height: 250px;
+    }
 }
