fix:header, feat footer

--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -13,9 +13,11 @@
 
 
     //text-color
-    --color-grey:#8b8e94;
-    --color-black:#000000;
-    --color-white:#fffefe;
-    --color-red:#FF1A1E;
-    
+    --color-grey: #8b8e94;
+    --color-black: #000000;
+    --color-white: #fffefe;
+    --color-red: #FF1A1E;
+    --color-deep-red: #ff0033;
+    --color-grey-deep: rgba(255, 255, 255, .7);
+
 }
