--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -2,7 +2,8 @@
 @import './variables.scss';
 
 body {
-  font: var(--font-l);
+  font: var(--font-m);
+  color: var(--color-grey);
   margin: 0;
 }
 
