--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,5 +1,87 @@
 .Footer {
     background-color: black;
-    color: white;
     padding: 40px 20px;
+
+}
+
+.Footer_content {
+    h3 {
+        font-size: 18px;
+        letter-spacing: .2em;
+        text-transform: uppercase;
+        color: #fff;
+    }
+
+    line-height: 24px;
+    font-size: 15px;
+    color: var(--color-grey-deep);
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+
+    @media (max-width: 800px) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 30px;
+
+        &>div:last-child {
+            grid-area: 2 / 1 / 3 / 3;
+        }
+    }
+
+    @media (max-width: 580px) {
+        display: flex;
+        flex-direction: column;
+    }
+
+
+}
+
+.Footer_time_block {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.Footer_time_container {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+
+    @media (max-width: 800px) {
+        gap: 5px;
+        max-width: 300px;
+    }
+}
+
+.Footer_content_item {
+    display: grid;
+    grid-template-rows: 40px auto;
+    gap: 20px;
+    align-items: start;
+}
+
+.Footer_time_block {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.Footer_content_reservations_title {
+
+    @media (max-width: 800px) {
+        display: flex;
+        gap: 5px;
+    }
+
+}
+
+.Footer_reservations_link {
+    display: flex;
+    flex-direction: column;
+}
+
+.Footer_link {
+    color: var(--color-deep-red);
+
 }
