--- a/src/components/PresentationMenu/PresentationMenu.module.scss
+++ b/src/components/PresentationMenu/PresentationMenu.module.scss
@@ -1,11 +1,11 @@
 .PresentationMenu {
-    max-height: auto;
-    min-height: 300px;
+    height: auto;
     display: flex;
     flex-wrap: wrap;
     position: relative;
     top: -58px;
     justify-content: center;
+    // max-height: 844px;
 }
 
 .title {
@@ -27,10 +27,17 @@
         padding: 31px 0 0 0
     }
 }
-@media(max-width:926px){
+
+@media(max-width:1200px) {
+    .PresentationMenu {
+        height: auto;
+    }
+}
+
+@media(max-width:500px) {
     .PresentationMenu {
         position: relative;
         top: 0;
     }
-      
+
 }
