--- a/src/components/ChefInfo/Chef.module.scss
+++ b/src/components/ChefInfo/Chef.module.scss
@@ -4,6 +4,7 @@
         justify-content: center;
         text-align: center;
         flex-direction: column;
+        padding: 0 0 23px 0;
     }
 
     &_dots {
