new componen and adaptiv

--- a/src/components/ParallaxComponent/ParallaxMain/ParallaxMain.module.scss
+++ b/src/components/ParallaxComponent/ParallaxMain/ParallaxMain.module.scss
@@ -36,6 +36,11 @@
     display: none;
 }
 
+.box{
+    position: relative;
+}
+
+
 @media(max-width:986px){
     .ParallaxTop_img{
         top: -3500px;
