--- a/src/components/Slider/slider.module.scss
+++ b/src/components/Slider/slider.module.scss
@@ -1,25 +1,34 @@
-.Slider {}
+.Slider {
+    padding: 50px 0px;
+
+    @media (max-width: 768px) {
+        padding: 25px 0px;
+    }
+}
 
 .Slider_content {
-    padding: 30px;
+    position: relative;
 }
 
 
 .Slider_title {
     text-align: center;
-    margin-bottom: 40px;
 
     h3 {
         color: #FF1A1E;
         font-size: 60px;
         letter-spacing: -5px;
         line-height: 1.2;
-        font-weight: 500;
+        font-weight: 400;
+
+        @media (max-width: 768px) {
+            font-size: 53px;
+        }
     }
 
     p {
         text-transform: uppercase;
-        color: #red;
+        color: red;
         margin: 0;
         padding: 0;
         letter-spacing: .05em;
@@ -27,5 +36,23 @@
         position: relative;
         font-weight: 700;
         line-height: 40px;
+
+        @media (max-width: 768px) {
+            font-size: 27px;
+        }
+
+    }
+}
+
+.Slider_btn_container {
+    position: absolute;
+    left: 50%;
+    bottom: 30px;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    width: 200px;
+
+    @media (max-width: 768px) {
+        bottom: 20px;
     }
 }
