--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -19,6 +19,19 @@
     background-color:var(--color-white);
 }
 
+.sliderBox{
+    position: relative;
+    &_slider{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        max-width: 1230px;
+        padding: 0 15px;
+        margin: 0 auto;
+        box-sizing: border-box;
+        transform: translate(-50%, -50%);
+    }
+}
 @media(max-width:709px){
     .containerPresentationMenu {
         padding: 0 0px;
