--- a/src/components/ParallaxComponent/ParallaxSlider/ParallaxSlider.module.scss
+++ b/src/components/ParallaxComponent/ParallaxSlider/ParallaxSlider.module.scss
@@ -1,6 +1,6 @@
 .ParallaxSlider {
     width: 100vw;
-    min-height: 650px;
+    min-height: 550px;
     position: relative;
     perspective: 0px;
     transform-style: preserve-3d;
@@ -19,7 +19,7 @@
         right: 0;
         bottom: 0;
         top: -4300px;
-        filter: brightness(0.8);
+        filter: brightness(0.5);
     }
 
     &_img::before {
@@ -73,6 +73,11 @@
 @media(max-width:700px) {
     .ParallaxSlider_img {
         top: -10000px;
+    }
+}
+@media(max-width:400px) {
+    .ParallaxSlider_img {
+        top: -9000px;
     }
 }
 
