--- a/src/components/Slider/slider.module.scss
+++ b/src/components/Slider/slider.module.scss
@@ -17,7 +17,7 @@
     h3 {
         color: #FF1A1E;
         font-size: 60px;
-        letter-spacing: -5px;
+        letter-spacing: 1px;
         line-height: 1.2;
         font-weight: 400;
 
@@ -28,7 +28,7 @@
 
     p {
         text-transform: uppercase;
-        color: red;
+        color: var(--color-white);
         margin: 0;
         padding: 0;
         letter-spacing: .05em;
@@ -55,4 +55,14 @@
     @media (max-width: 768px) {
         bottom: 20px;
     }
+    @media (max-width: 400px) {
+        left: 58%;
+    }
+}
+
+
+@media (max-width: 768px) {
+.Slider_title{
+    margin: 0 0 -50px 0;
+}
 }
