--- a/src/components/WindowImg/WindowImg.module.scss
+++ b/src/components/WindowImg/WindowImg.module.scss
@@ -1,9 +1,9 @@
 .WindowImg {
-    max-width: 100%;
+    width: 100%;
     height: 550px;
 
     &_img {
-        background-image: url(../../img/vve3ewl8ebqxvpdd1166ku4z80bkdvqx.jpg);
+        background-image: url(../../img/vve3.jpg);
         max-width: 100%;
         height: 100%;
         background-repeat: no-repeat;
@@ -12,3 +12,36 @@
     }
 }
 
+@media(max-width:725px) {
+    .WindowImg {
+        width: 100%;
+        height: 550px;
+
+        &_img {
+            background-image: url(../../img/IMG_2912-2.jpg);
+            max-width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            background-size: cover;
+            margin-bottom: 50px;
+            background-position-x: -90px;
+        }
+    }
+}
+
+@media(max-width:529px) {
+    .WindowImg {
+        width: 100%;
+        height: 550px;
+
+        &_img {
+            background-image: url(../../img/IMG_2912-2.jpg);
+            max-width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            background-size: cover;
+            margin-bottom: 50px;
+            background-position-x: -273px;
+        }
+    }
+}
