--- a/src/ui/Button/button.module.scss
+++ b/src/ui/Button/button.module.scss
@@ -2,10 +2,23 @@
     text-transform: uppercase;
     color: white;
     background: var(--color-red);
-    border: 1px solid #FFA33E;
+    border: 1px solid var(--color-white);
     font-size: 14px;
     line-height: 1.5;
     border-radius: 30px;
     padding: 10px 30px;
     z-index: 12;
+    transition: ease 0.5s;
+    &:hover{
+        color: var(--color-red);
+        border: 1px solid var(--color-red);
+        background:var(--color-white);
+    }
+}
+@media(max-width:400px){
+    .Button {
+        font-size: 10px;
+        line-height: 1.5;
+        padding: 9px 19px;
+    } 
 }
