--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -27,7 +27,7 @@ body {
   margin: 0 auto;
   padding: 0 30px;
 
-  @media (min-width: 700px) {
+  @media (max-width: 700px) {
     padding: 0 5px;
   }
 }
