--- a/src/components/WindowImg/WindowImg.module.scss
+++ b/src/components/WindowImg/WindowImg.module.scss
@@ -1,11 +1,19 @@
 .WindowImg {
     width: 100%;
-    height: 550px;
+    // height: 550px;
 
     &_img {
-        background-image: url(../../img/vve3.jpg);
-        max-width: 100%;
-        height: 100%;
+        width: 100%;
+        height: 620px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-bottom: 50px;
+    }
+
+    &_avaptiv {
+        display: none;
+        width: 100%;
+        height: 620px;
         background-repeat: no-repeat;
         background-size: cover;
         margin-bottom: 50px;
@@ -17,15 +25,6 @@
         width: 100%;
         height: 550px;
 
-        &_img {
-            background-image: url(../../img/IMG_2912-2.jpg);
-            max-width: 100%;
-            height: 100%;
-            background-repeat: no-repeat;
-            background-size: cover;
-            margin-bottom: 50px;
-            background-position-x: -90px;
-        }
     }
 }
 
@@ -35,13 +34,17 @@
         height: 550px;
 
         &_img {
-            background-image: url(../../img/IMG_2912-2.jpg);
-            max-width: 100%;
-            height: 100%;
+            display: none;
+        }
+
+        &_avaptiv {
+            display: block;
+            width: 100%;
+            height: 620px;
             background-repeat: no-repeat;
             background-size: cover;
             margin-bottom: 50px;
-            background-position-x: -273px;
+            background-position: -273px 0;
         }
     }
 }
