--- a/src/pages/MenuPage/MenuPage.module.scss
+++ b/src/pages/MenuPage/MenuPage.module.scss
@@ -1,7 +1,8 @@
 .MenuPage {
-    background-color: rgba(255, 255, 255, 0.15);
+    background-color: #fef9f4;
     color: black;
     padding-bottom: 50px;
+
 }
 
 .MenuPage_firstScreen {
@@ -9,33 +10,5 @@
 }
 
 
-.Tabllist {
-    font-size: 16px;
-    font-weight: normal;
-    color: var(--color-grey);
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 30px 0px;
-    row-gap: 10px;
-    
 
-}
-
-.Tablist_item {
-    cursor: pointer;
-    padding: 10px;
-    box-sizing: border-box;
-    transition: color 0.3s ease-in-out ;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    &:hover{
-        color: black;
-    }
-
-}
-
-.Tablist_item_active {
-    color: black;
-}
 
