--- a/src/ui/Modal/modal.module.scss
+++ b/src/ui/Modal/modal.module.scss
@@ -39,7 +39,9 @@
     max-height: 100vh;
     overflow: auto;
     margin: 0 auto;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     padding: 20px;
 
