--- a/src/components/WindowImg/WindowImg.module.scss
+++ b/src/components/WindowImg/WindowImg.module.scss
@@ -39,23 +39,23 @@
 //     }
 // }
 
-// @media(max-width:529px) {
-//     .WindowImg {
-//         width: 100%;
-//         height: 550px;
+@media(max-width:529px) {
+    .WindowImg {
+        width: 100%;
+        height: 550px;
 
-//         &_img {
-//             display: none;
-//         }
+        &_img {
+            display: none;
+        }
 
-//         &_avaptiv {
-//             display: block;
-//             width: 100%;
-//             height: 620px;
-//             background-repeat: no-repeat;
-//             background-size: cover;
-//             margin-bottom: 50px;
-//             background-position: -273px 0;
-//         }
-//     }
-// }
+        &_avaptiv {
+            display: block;
+            width: 100%;
+            height: 620px;
+            background-repeat: no-repeat;
+            background-size: cover;
+            margin-bottom: 50px;
+            background-position: -273px 0;
+        }
+    }
+}
