--- a/src/components/Slider/FormReview/form.module.scss
+++ b/src/components/Slider/FormReview/form.module.scss
@@ -1,7 +1,7 @@
 .Form {
     margin: 0 auto;
     background-color: white;
-    padding: 20px;
+    padding: 30px 20px 20px;
     border-radius: 15px;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .09);
 
@@ -12,25 +12,27 @@
     flex-direction: column;
     gap: 25px;
     align-items: center;
-    button{
+
+    button {
         width: 200px !important;
     }
 }
 
 .Form_list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 30px;
-
-    @media (max-width:870px) {
-        grid-template-columns: repeat(2, 1fr);
-
-    }
 
     @media (max-width:590px) {
         grid-template-columns: 1fr;
     }
-  
+
+    &>:nth-child(3) {
+        @media (min-width:590px) {
+            grid-area: 2 / 1 / 3 / 3;
+        }
+    }
+
 }
 
 .Form_list_field {
@@ -57,6 +59,7 @@
         outline: 1px solid var(--color-red);
     }
 }
+
 .send_container {
     padding: 35px;
     background-color: white;
