--- a/src/ui/Button/button.module.scss
+++ b/src/ui/Button/button.module.scss
@@ -9,16 +9,20 @@
     padding: 10px 30px;
     z-index: 12;
     transition: ease 0.5s;
+    min-width: 70px;
+    box-sizing: border-box;
     &:hover{
         color: var(--color-red);
         border: 1px solid var(--color-red);
         background:var(--color-white);
     }
+    &:disabled{
+        background:var(--color-grey);
+
+    }
 }
 @media(max-width:400px){
     .Button {
-        font-size: 10px;
-        line-height: 1.5;
-        padding: 9px 19px;
+     
     } 
 }
