--- a/src/components/MenuFirstScreen/firstScreen.module.scss
+++ b/src/components/MenuFirstScreen/firstScreen.module.scss
@@ -50,7 +50,7 @@
     letter-spacing: 2px;
     text-transform: uppercase;
     color: var(--color-grey);
-
+    text-shadow: 1px 1px 1px white;
 
     &:hover {
         color: var(--color-white);
