--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -19,5 +19,7 @@
     --color-red: #FF1A1E;
     --color-deep-red: #ff0033;
     --color-grey-deep: rgba(255, 255, 255, .7);
+    --color-beige :    #fef9f4;
+
 
 }
