--- a/src/components/ParallaxComponent/Parallax/Parallax.module.scss
+++ b/src/components/ParallaxComponent/Parallax/Parallax.module.scss
@@ -3,13 +3,13 @@
     min-height: 550px;
     position: relative;
     perspective: 0px;
-    // transform-style: preserve-3d;
+    transform-style: preserve-3d;
     overflow-y: scroll;
     overflow-x: hidden;
     box-sizing: border-box;
     text-align: center;
     z-index: -2;
-
+    scroll-behavior: smooth;
     &_img {
         margin-top: -150px;
         position: absolute;
