--- a/src/components/ParallaxComponent/ParallaxMain/ParallaxMain.module.scss
+++ b/src/components/ParallaxComponent/ParallaxMain/ParallaxMain.module.scss
@@ -9,7 +9,7 @@
     box-sizing: border-box;
     text-align: center;
     z-index: -2;
-
+    scroll-behavior: smooth;
     &_img {
         margin-top: -150px;
         position: absolute;
