--- a/src/components/ParallaxComponent/ParallaxSlider/ParallaxSlider.module.scss
+++ b/src/components/ParallaxComponent/ParallaxSlider/ParallaxSlider.module.scss
@@ -9,8 +9,7 @@
     box-sizing: border-box;
     text-align: center;
     z-index: -2;
-
-
+    scroll-behavior: smooth;
 
     &_img {
         margin-top: -325px;
