--- a/src/components/Providing/Providing.module.scss
+++ b/src/components/Providing/Providing.module.scss
@@ -41,39 +41,52 @@
         width: 104px
     }
 }
-.marginRight{
+
+.marginRight {
     margin-right: 100px;
 }
-.marginLeft{
+
+.marginLeft {
     margin-left: 100px;
 }
-.location{
+
+.location {
     justify-content: unset;
 }
 
-.hidden{
+.hidden {
     display: none;
 }
 
-@media(max-width:1232px){
-    .marginRight{
+
+.box_reverse .advantages:nth-child(1) .advantages_text {
+    margin: 0px 13px 0 0px
+
+}
+
+@media(max-width:1232px) {
+    .marginRight {
         margin-right: 50px;
     }
-    .marginLeft{
+
+    .marginLeft {
         margin-left: 50px;
-    } 
+    }
 }
-@media(max-width:1057px){
-    .marginRight{
+
+@media(max-width:1057px) {
+    .marginRight {
         margin-right: 20px;
     }
-    .marginLeft{
+
+    .marginLeft {
         margin-left: 20px;
-    } 
+    }
+
     .advantages {
 
         margin: 0px 0 30px 0;
-    
+
         &_text {
             font-size: 16px;
             line-height: 3.528571;
@@ -81,14 +94,15 @@
             text-transform: uppercase;
             color: #000000;
         }
-    
+
         &_img {
             height: 85px;
             width: 104px
         }
     }
 }
-@media(max-width:700px){
+
+@media(max-width:700px) {
     .Providing {
         display: flex;
         justify-content: center;
@@ -96,22 +110,24 @@
         padding: 70px 0;
         flex-wrap: wrap;
     }
-    .visible{
+
+    .visible {
         display: none;
     }
-    .hidden{
+
+    .hidden {
         display: flex;
     }
-    .location{
+
+    .location {
         justify-content: space-between;
     }
-    
+
 }
-@media(max-width:440px){
-    
-    .advantages_text{
+
+@media(max-width:440px) {
+
+    .advantages_text {
         font-size: 13px;
     }
 }
-
-
