delete slice,delete error

--- a/src/components/Slider/swiper/swiper.scss
+++ b/src/components/Slider/swiper/swiper.scss
@@ -3,7 +3,7 @@
 
 }
 
-.mySwiper {
+// .mySwiper {
 
     .swiper {
         width: 1100px;
@@ -89,4 +89,3 @@
             line-height: 20px;
         }
     }
-}
