--- a/src/components/SliderMenu/slider.module.scss
+++ b/src/components/SliderMenu/slider.module.scss
@@ -1,26 +1,19 @@
 .Slider {
     background-color: var(--color-beige);
-    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.29);
-    z-index: 6;
     width: 100%;
     overflow: hidden;
-    position: absolute;
-    height: 0;
-    transition: height 0.4s ease-in-out;
-
-    @media (max-width: 768px) {}
-}
-
-.Slider_active {
-    height: 65px;
-    position: fixed;
     top: 80px;
-    left: 0;
-    right: 0;
-    @media (max-width: 768px) {
+    transition: all 0.6s ease-in-out;
+    z-index: 3;
+    position: sticky !important;
+    @media (max-width: 845px) {
         top:50px;
     }
+    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.29);
+
 }
+
+
 
 .Slider_content {
     position: relative;
