--- a/src/components/SliderMenu/swiper/swiper.scss
+++ b/src/components/SliderMenu/swiper/swiper.scss
@@ -54,4 +54,11 @@
         background-color: var(--color-beige) !important;
         z-index: 10;
     }
+
+    @media (max-width:768px) {
+        .swiper-button-next,
+        .swiper-button-prev{
+            display: none;
+        }
+    }
 }
